basic css styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>повторення html</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>повторення html lesson 2</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <section>
+        <div class="container">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            non illo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Numquam, nisi! Impedit perspiciatis qui sint rem eveniet aperiam ea
+            ut tenetur, esse ducimus voluptatibus. Deleniti culpa,
+            exercitationem tenetur eos nostrum perspiciatis temporibus tempore
+            voluptatibus quasi voluptates quaerat ullam provident, eligendi odit
+            ut modi earum voluptatem corrupti ab molestiae aliquid nisi atque?
+            Nihil suscipit doloremque deleniti esse!
+          </p>
+          <img src="./images/1.jpg" alt="1">
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
