--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <header></header>
     <main>
-      <section>
+      <section class="py-rem">
         <div class="container">
-          <p>
+          <p class="py-rem">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
             non illo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Numquam, nisi! Impedit perspiciatis qui sint rem eveniet aperiam ea
