--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>повторення html</title>
 </head>
 <body>
-    
+     <header></header>
+    <main>
+      <section class="py-rem">
+        <h1>Lorem, ipsum.</h1>
+        <div class="container">
+          <p class="py-rem">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            non illo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Numquam, nisi! Impedit perspiciatis qui sint rem eveniet aperiam ea
+            ut tenetur, esse ducimus voluptatibus. Deleniti culpa,
+            exercitationem tenetur eos nostrum perspiciatis temporibus tempore
+            voluptatibus quasi voluptates quaerat ullam provident, eligendi odit
+            ut modi earum voluptatem corrupti ab molestiae aliquid nisi atque?
+            Nihil suscipit doloremque deleniti esse!
+          </p>
+          <img src="./images/1.jpg" alt="1">
+        </div>
+      </section>
+      <section>
+        <h2>Lorem, ipsum dolor.</h2>
+      </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
